--- a/app/partials/landing.html
+++ b/app/partials/landing.html
@@ -3,10 +3,10 @@
   <div class="container">
     <div class="row row-centered">
       <div class="col-sm-4 col-centered">
-        <img src="images/dp-logo.png" class="img-responsive intro-hero-logo mtop10" alt="">
+        <img src="/images/dp-logo.png" class="img-responsive intro-hero-logo mtop10" alt="">
       </div>
       <div class="col-sm-12 col-centered">
-        <img src="images/all-princesses.png" class="img-responsive intro-all-princesses" alt="">
+        <img src="/images/all-princesses.png" class="img-responsive intro-all-princesses" alt="">
       </div>
     </div>
   </div>
@@ -24,7 +24,7 @@
     <div class="row row-centered">
       <div class="col-sm-5 col-centered">
         <div class="pitch-box-img animated zoomIn">
-          <img src="images/dp-box-1.png" class="img-responsive">
+          <img src="/images/dp-box-1.png" class="img-responsive">
         </div>
       </div>
 
@@ -34,7 +34,7 @@
         </h2>
 
         <div class="pitch-box-cta text-center animated slideInUp">
-          <a class="btn btn-primary btn-blue btn-x-lg">Join the Princess club</a>
+          <a class="btn btn-primary btn-blue btn-x-lg" href="/signup">Join the Princess club</a>
           <h3 class="text-lg text-center text-super-bold text-blue">Limited Edition</h3>
         </div>
       </div>
@@ -54,21 +54,21 @@
     <ul class="row row-centered intro-how-it-works-steps text-white ptop30">
       <li class="col-sm-4 col-centered text-center">
         <div class="icon animated zoomIn">
-          <img src="images/icons/new-episode-icon.svg">
+          <img src="/images/icons/new-episode-icon.svg">
         </div>
         <h2 class="animated slideInUp">A New Story</h2>
         <h4 class="animated slideInUp">Every box presents a scene from the beloved story. Re-create your Princess experience.</h4>
       </li>
       <li class="col-sm-4 col-centered text-center">
         <div class="icon animated zoomIn">
-          <img src="images/icons/king-crown.svg">
+          <img src="/images/icons/king-crown.svg">
         </div>
         <h2 class="animated slideInUp">Exclusive Items</h2>
         <h4 class="animated slideInUp">Every box includes unique figures, accessories, content and goodies just for you.</h4>
       </li>
       <li class="col-sm-4 col-centered text-center">
         <div class="icon animated zoomIn">
-          <img src="images/icons/cancel-anytime-icon.svg">
+          <img src="/images/icons/cancel-anytime-icon.svg">
         </div>
         <h2 class="animated slideInUp">Cancel Anytime</h2>
         <h4 class="animated slideInUp">You can cancel online anytime or skip a month.</h4>
@@ -91,7 +91,7 @@
     <ul class="row row-centered list-unstyled list-inline mtop50">
       <li class="col-sm-4 col-centered">
         <div class="pitch-box-img animated zoomIn">
-          <img src="images/dp-box-1.png" class="img-responsive">
+          <img src="/images/dp-box-1.png" class="img-responsive">
         </div>
       </li>
       <li class="col-sm-2 col-centered">
@@ -99,13 +99,13 @@
       </li>
 
       <li class="col-sm-6 col-centered">
-        <img src="images/dp-box-contents.png" style="margin-left:-75px" class="img-responsive" alt="">
+        <img src="/images/dp-box-contents.png" style="margin-left:-75px" class="img-responsive" alt="">
       </li>
 
       <li class="col-sm-12 mtop50">
         <div class="pitch-box-cta text-center animated slideInUp">
           <h2 class="mbot20">Get it Now before it’s sold out.</h2>
-          <a class="btn btn-primary btn-blue btn-x-lg">Join the Princess club</a>
+          <a class="btn btn-primary btn-blue btn-x-lg" href="/signup">Join the Princess club</a>
           <h3 class="text-lg text-center text-super-bold text-blue">Limited Edition</h3>
         </div>
       </li>
