--- a/app/partials/footer.html
+++ b/app/partials/footer.html
@@ -1,4 +1,4 @@
-<div class="container-fluid bg-extreme-gray">
+<div class="container-fluid bg-extreme-dark">
     <div class="container">
         <p class="mtopbot15 text-center text-white">
             Terms and conditions. 2016 All Rights Reserved.
