Updated icon thickness and minor Ui changes.

--- a/app/partials/landing.html
+++ b/app/partials/landing.html
@@ -17,7 +17,7 @@
     <div class="row row-centered">
       <div class="col-sm-12 col-centered">
         <h2 class="text-center pitch-heading animated slideInDown mtop0">
-          Hi Princess, join our <b>Magical Club</b> and be part of our story
+          Hi Princess, join our <b>Magical Club</b> and take part of the story
         </h2>
       </div>
     </div>
@@ -35,7 +35,7 @@
 
         <div class="pitch-box-cta text-center animated slideInUp">
           <a class="btn btn-primary btn-blue btn-x-lg" href="/signup">Join the Princess club</a>
-          <h3 class="text-lg text-center text-super-bold text-blue">Limited Edition</h3>
+          <h3 class="text-x-lg text-center text-super-bold text-purple">Limited Edition</h3>
         </div>
       </div>
     </div>
@@ -64,7 +64,7 @@
           <img src="/images/icons/king-crown.svg">
         </div>
         <h2 class="animated slideInUp">Exclusive Items</h2>
-        <h4 class="animated slideInUp">Every box includes unique figures, accessories, content and goodies just for you.</h4>
+        <h4 class="animated slideInUp">Every box includes unique figurines, accessories, content and goodies just for you.</h4>
       </li>
       <li class="col-sm-4 col-centered text-center">
         <div class="icon animated zoomIn">
@@ -99,14 +99,14 @@
       </li>
 
       <li class="col-sm-6 col-centered">
-        <img src="/images/dp-box-contents.png" style="margin-left:-75px" class="img-responsive" alt="">
+        <img src="/images/box-contents.png" style="margin-left:-75px" class="img-responsive" alt="">
       </li>
 
       <li class="col-sm-12 mtop50">
         <div class="pitch-box-cta text-center animated slideInUp">
           <h2 class="mbot20">Get it Now before it’s sold out.</h2>
           <a class="btn btn-primary btn-blue btn-x-lg" href="/signup">Join the Princess club</a>
-          <h3 class="text-lg text-center text-super-bold text-blue">Limited Edition</h3>
+          <h3 class="text-x-lg text-center text-super-bold text-purple">Limited Edition</h3>
         </div>
       </li>
     </ul>
