updated the home page Also added new-image of box-contents.

--- a/app/partials/landing.html
+++ b/app/partials/landing.html
@@ -3,10 +3,10 @@
   <div class="container">
     <div class="row row-centered">
       <div class="col-sm-4 col-centered">
-        <img src="/images/dp-logo.png" class="img-responsive intro-hero-logo mtop10" alt="">
+        <img src="/images/dp-logo.png" class="img-responsive intro-hero-logo mtop10 animated slideInDown" alt="">
       </div>
       <div class="col-sm-12 col-centered">
-        <img src="/images/all-princesses.png" class="img-responsive intro-all-princesses" alt="">
+        <img src="/images/all-princesses.png" class="img-responsive intro-all-princesses animated slideInUp" alt="">
       </div>
     </div>
   </div>
@@ -51,7 +51,7 @@
         <h3 class="text-center text-white text-thin text-lg animated slideInUp">Dream big! The Disney Princess box offers an exclusive monthly box of magical items that bring to life loved stories directly to your home.</h3>
       </div>
     </div>
-    <ul class="row row-centered intro-how-it-works-steps text-white ptop30">
+    <ul class="row row-centered intro-how-it-works-steps text-white pad0">
       <li class="col-sm-4 col-centered text-center">
         <div class="icon animated zoomIn">
           <img src="/images/icons/new-episode-icon.svg">
@@ -68,7 +68,7 @@
       </li>
       <li class="col-sm-4 col-centered text-center">
         <div class="icon animated zoomIn">
-          <img src="/images/icons/cancel-anytime-icon.svg">
+          <img src="/images/icons/cancel-anytime-icon.svg" class="cancel-icon">
         </div>
         <h2 class="animated slideInUp">Cancel Anytime</h2>
         <h4 class="animated slideInUp">You can cancel online anytime or skip a month.</h4>
@@ -79,32 +79,34 @@
 </section>
 
 <section class="container-fluid box-contents">
-  <div class="container">
+  <div class="container pleftright0">
     <div class="row row-centered">
       <div class="col-sm-12 col-centered">
         <h2 class="text-center pitch-heading animated slideInDown mtop0 mbot0">
           What do I get in the box?
         </h2>
-        <h3 class="text-center text-thin text-x-lg mtop0 animated slideInUp lineHeightNormal pleftright40">Each magical box transforms into a scene from the story and includes Princess figurines, fashion accessories and goodies.  <b>Live like a Princess, join our club.</b> </h3>
+        <h3 class="text-center box-contents-text text-thin text-x-lg mtop0 animated slideInUp lineHeightNormal pleftright40">Each magical box transforms into a scene from the story and includes Princess figurines, fashion accessories and goodies.  <b>Live like a Princess, join our club.</b> </h3>
       </div>
     </div>
     <ul class="row row-centered list-unstyled list-inline mtop50">
-      <li class="col-sm-4 col-centered">
-        <div class="pitch-box-img animated zoomIn">
-          <img src="/images/dp-box-1.png" class="img-responsive">
+      <li class="col-sm-3 col-xs-12 col-centered">
+        <div class="animated zoomIn">
+          <img src="/images/dp-box-1.png" class="img-responsive margin-auto box-image">
         </div>
       </li>
-      <li class="col-sm-2 col-centered">
+      <li class="col-sm-1 text-center hidden-xs col-centered">
         <i class="fa fa-angle-double-right fa-5x"></i>
       </li>
-
-      <li class="col-sm-6 col-centered">
-        <img src="/images/box-contents.png" style="margin-left:-75px" class="img-responsive" alt="">
+      <li class="col-xs-12 visible-xs text-center col-centered">
+        <i class="fa fa-angle-double-down fa-5x"></i>
+      </li>
+      <li class="col-sm-7 col-centered">
+        <img src="/images/box-contents-1.png" class="img-responsive" alt="">
       </li>
 
       <li class="col-sm-12 mtop50">
         <div class="pitch-box-cta text-center animated slideInUp">
-          <h2 class="mbot20">Get it Now before it’s sold out.</h2>
+          <h2 class="mbot20 gin-text">Get it Now before it’s sold out.</h2>
           <a class="btn btn-primary btn-blue btn-x-lg" href="/signup">Join the Princess club</a>
           <h3 class="text-x-lg text-center text-super-bold text-purple">Limited Edition</h3>
         </div>
