--- a/app/partials/signup.html
+++ b/app/partials/signup.html
@@ -11,10 +11,8 @@
                         <a href="/" class="btn btn-primary btn-white">Let's go home</a>
                     </div>
                 </div>
-                <div class="row">
-                    <div class="col-sm-12 bg-pink pleftright0 ptopbot5">
-                        <h3 class="text-center text-white mtop10">Join our Magical Club</h3>
-                    </div>
+                <div class="bg-pink ptopbot10">
+                    <h3 class="text-center text-white mtopbot5">Join our Magical Club</h3>
                 </div>
                 <form class="row pad10 mtop10 mleftright0" ng-submit="submitSignup()">
                     <div class="form-group col-sm-6">
