minor text updates. Also fixed an animation issue for the hero header.

--- a/app/partials/landing.html
+++ b/app/partials/landing.html
@@ -17,7 +17,7 @@
     <div class="row row-centered">
       <div class="col-sm-12 col-centered">
         <h2 class="text-center pitch-heading animated slideInDown mtop0">
-          Hi Princess, join our <b>Magical Club</b> and take part of the story
+          Hi Princess, join our <b>Magical Club</b> and take part in the story
         </h2>
       </div>
     </div>
@@ -34,7 +34,7 @@
         </h2>
 
         <div class="pitch-box-cta text-center animated slideInUp">
-          <a class="btn btn-primary btn-blue btn-x-lg" href="/signup">Join the Princess club</a>
+          <a class="btn btn-primary btn-blue btn-x-lg" href="/signup">Join the Princess Club</a>
           <h3 class="text-x-lg text-center text-super-bold text-purple">Limited Edition</h3>
         </div>
       </div>
@@ -106,8 +106,8 @@
 
       <li class="col-sm-12 mtop50">
         <div class="pitch-box-cta text-center animated slideInUp">
-          <h2 class="mbot20 gin-text">Get it Now before it’s sold out.</h2>
-          <a class="btn btn-primary btn-blue btn-x-lg" href="/signup">Join the Princess club</a>
+          <h2 class="mbot20 gin-text">Get it now before it’s sold out.</h2>
+          <a class="btn btn-primary btn-blue btn-x-lg" href="/signup">Join the Princess Club</a>
           <h3 class="text-x-lg text-center text-super-bold text-purple">Limited Edition</h3>
         </div>
       </li>
