updated princess image by removing elsa.

--- a/app/partials/landing.html
+++ b/app/partials/landing.html
@@ -6,7 +6,7 @@
         <img src="/images/dp-logo.png" class="img-responsive intro-hero-logo mtop10 animated slideInDown" alt="">
       </div>
       <div class="col-sm-12 col-centered">
-        <img src="/images/all-princesses.png" class="img-responsive intro-all-princesses animated slideInUp" alt="">
+        <img src="/images/all-princesses-new.png" class="img-responsive intro-all-princesses animated slideInUp" alt="">
       </div>
     </div>
   </div>
